[FIX] account, *: wrap quantity uom in reports
*: l10n_gcc_invoice,l10n_it_stock_ddt,sale,stock,web

Issue: Commit[1] introduced a `text-nowrap` on the quantity column, this
unnecessarily crops the other columns if we use a long UoM.

This commit adds a max-width and min-width to the UoM column and applies
the text-nowrap to the quantity only, letting the long UoM wrap if too
long. The min-width avoids unnecessarily wrapping on 2 lines when we
have a long description, it's an arbitrary safeguard.

task-4478718

[1]: odoo/odoo@344bdb1ed4cecdaef007200c011f87e58e36c87d

closes odoo/odoo#219129

X-original-commit: d67e5a55e29bfa5f72fb016933dd6082cb4642f9

--- a/addons/web/static/src/webclient/actions/reports/report.scss
+++ b/addons/web/static/src/webclient/actions/reports/report.scss
@@ -159,6 +159,12 @@ span[itemprop="streetAddress"] {
     white-space: normal;
 }
 
+// Force a max width on quantity column to handle long UoM
+.o_td_quantity {
+    min-width: 7rem;
+    max-width: 9rem;
+}
+
 // Override html_editor display styles as it uses 'calc' which doesn't work with wkhtmltopdf
 .display-1-fs {
     font-size: 6rem;
